--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,8 @@
 
     <%= yield :head %>
 
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/icon.png">
-
     <%= vite_client_tag %>
-    <%= vite_javascript_tag 'entrypoints/application.tsx', type: 'module' %>
+    <%= vite_javascript_tag 'application.tsx', type: 'module' %>
 
   </head>
 
