--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= favicon_link_tag 'favicon.ico' %>
+    <%= favicon_link_tag '/favicon.ico' %>
+    <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="<%= asset_path 'apple-touch-icon.png' %>">
 
     <%= yield :head %>
