chore: edited vite js tag to vite typescript tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= yield :head %>
 
     <%= vite_client_tag %>
-    <%= vite_javascript_tag 'application.tsx', type: 'module' %>
+    <%= vite_typescript_tag 'application.tsx', type: 'module' %>
 
   </head>
 
